Port bug fixes and minor changes I made to Tomcat 4 to Tomcat 5 where appropriate.
git-svn-id: https://svn.apache.org/repos/asf/tomcat@305380 13f79535-47bb-0310-9956-ffa450edef68